<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_browse"
        android:icon="@drawable/ic_folder"
        android:title="@string/title_browse" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />
    <item
        android:id="@+id/nav_manifest"
        android:icon="@drawable/ic_manifest"
        android:title="@string/title_manifest" />
    <item
        android:id="@+id/nav_resource"
        android:icon="@drawable/ic_resource"
        android:title="@string/title_resource" />
    <item
        android:id="@+id/nav_unshell"
        android:icon="@drawable/ic_unshell"
        android:title="@string/title_unshell" />
</menu>
